--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,26 @@
                 android:layout_height="1dp"
                 android:layout_margin="8dp"
                 android:background="#ffffffff" />
+            <TextView
+                android:id="@+id/btn6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                style="@android:style/Widget.Button"
+                android:onClick="onClick"
+                android:text="Delete Test" />
+
+            <TextView
+                android:id="@+id/text6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="8dp"
+                android:background="#ffffffff" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
